# python3-poetry-pyenv-imac

./: config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
configfile/: chakan_nornir_plugin_view.py  hx.txt  jhjtelnet.py  napalmRouterCon.py  pdbtes.py  routerconfig.py  show equipment.py  telnetpy.py  test.py
inventory/: hosts.yaml
